--- a/AngularCaritas/src/app/app.component.html
+++ b/AngularCaritas/src/app/app.component.html
@@ -15,7 +15,7 @@
       </mat-form-field>
     </div>
   </mat-toolbar>
-
+  
   <mat-sidenav-container class="example-sidenav-container"
                          [style.marginTop.px]="mobileQuery.matches ? 56 : 0">
     <mat-sidenav #snav [mode]="mobileQuery.matches ? 'over' : 'side'"
@@ -23,9 +23,11 @@
       <mat-nav-list>
 
 
-        <a mat-list-item>Korisnici </a>
-        <a mat-list-item>Smještaj </a>
+        <a mat-list-item routerLink="/korisnici" routerLinkActive="active">Korisnici </a>
+        <a mat-list-item routerLink="/smjestaj" routerLinkActive="active">Smještaj </a>
       </mat-nav-list>
     </mat-sidenav>
+    <router-outlet> </router-outlet>
   </mat-sidenav-container>
+  
 </div>
