--- a/AngularCaritas/src/app/residence/residence.component.html
+++ b/AngularCaritas/src/app/residence/residence.component.html
@@ -1,3 +1,28 @@
-<p>
-  residence works!
-</p>
+<div class="filtering">
+  <mat-form-field>
+    <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Pretraži">
+  </mat-form-field>
+</div>
+
+<table mat-table [dataSource] = "dataSource" class="mat-elevation-z8" matSort>
+    
+    
+      <ng-container matColumnDef="naziv">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Naziv </th>
+        <td mat-cell *matCellDef="let element"> {{element.naziv}} </td>
+      </ng-container>
+    
+      <ng-container matColumnDef="adresa">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Adresa </th>
+        <td mat-cell *matCellDef="let element"> {{element.adresa}} </td>
+      </ng-container>
+    
+      <ng-container matColumnDef="opis">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Opis </th>
+        <td mat-cell *matCellDef="let element"> {{element.opis}} </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
+<mat-paginator [pageSizeOptions]="[5,10,20]" showFirstLastButtons></mat-paginator>
