--- a/AngularCaritas/src/app/residence/residence.component.html
+++ b/AngularCaritas/src/app/residence/residence.component.html
@@ -3,26 +3,47 @@
     <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Pretraži">
   </mat-form-field>
 </div>
+<button mat-stroked-button color="primary">+  Dodaj smještaj</button>
 
-<table mat-table [dataSource] = "dataSource" class="mat-elevation-z8" matSort>
-    
-    
+<table mat-table [dataSource] = "dataSourceSmjestaj" class="mat-elevation-z8" matSort>
       <ng-container matColumnDef="naziv">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Naziv </th>
-        <td mat-cell *matCellDef="let element"> {{element.naziv}} </td>
+        <td mat-cell *matCellDef="let elementSmjestaj"> {{elementSmjestaj.naziv}} </td>
       </ng-container>
     
       <ng-container matColumnDef="adresa">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Adresa </th>
-        <td mat-cell *matCellDef="let element"> {{element.adresa}} </td>
+        <td mat-cell *matCellDef="let elementSmjestaj"> {{elementSmjestaj.adresa}} </td>
       </ng-container>
     
       <ng-container matColumnDef="opis">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Opis </th>
-        <td mat-cell *matCellDef="let element"> {{element.opis}} </td>
+        <td mat-cell *matCellDef="let elementSmjestaj"> {{elementSmjestaj.opis}} </td>
       </ng-container>
 
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      <tr mat-header-row *matHeaderRowDef="displayedColumnsSmjestaj"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumnsSmjestaj;"></tr>
+</table>
+<mat-paginator [pageSizeOptions]="[5,10,20]" showFirstLastButtons></mat-paginator>
+
+<div class="filtering">
+  <mat-form-field>
+    <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Pretraži">
+  </mat-form-field>
+</div>
+<button mat-stroked-button color="primary">+  Dodaj sobu</button>
+<table mat-table [dataSource]="dataSourceSoba" class="mat-elevation-z8" matSort>
+      <ng-container matColumnDef="nazivSobe">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Naziv Sobe</th>
+        <td mat-cell *matCellDef="let elementSoba"> {{elementSoba.nazivSobe}} </td>
+      </ng-container>
+    
+      <ng-container matColumnDef="opisSobe">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Opis </th>
+        <td mat-cell *matCellDef="let elementSoba"> {{elementSoba.opisSobe}} </td>
+      </ng-container>
+    
+      <tr mat-header-row *matHeaderRowDef="displayedColumnsSoba"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumnsSoba;"></tr>
 </table>
 <mat-paginator [pageSizeOptions]="[5,10,20]" showFirstLastButtons></mat-paginator>
