--- a/AngularCaritasPRAVI/src/app/users/users.component.html
+++ b/AngularCaritasPRAVI/src/app/users/users.component.html
@@ -94,7 +94,7 @@
   <div class="example-table-container mat-elevation-z8">
 
     <table mat-table [dataSource]="users" class="example-table"
-           matSort matSortActive="oib" matSortDisableClear matSortDirection="asc">
+           matSort matSortActive="oib" matSortDisableClear  >
            
       <ng-container matColumnDef="oib">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>OIB</th>
@@ -135,7 +135,7 @@
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
     
-    <mat-paginator [pageSizeOptions]="[5,10,20,30]"></mat-paginator>
+    <mat-paginator [pageSizeOptions]="[5,10,20,30]" showFirstLastButtons></mat-paginator>
   </div>
 
 
