--- a/AngularCaritasPRAVI/src/app/app.component.html
+++ b/AngularCaritasPRAVI/src/app/app.component.html
@@ -5,10 +5,10 @@
     <div id="userSelect">
       <mat-form-field >
         <mat-select placeholder="Odaberi korisnika" >
-          <mat-option >
+          <mat-option value="master">
             Djelatnik (master)
           </mat-option>
-          <mat-option>
+          <mat-option value="basic">
             Djelatnik (basic)
           </mat-option>
         </mat-select>
@@ -21,8 +21,6 @@
     <mat-sidenav #snav [mode]="mobileQuery.matches ? 'over' : 'side'"
                  [fixedInViewport]="mobileQuery.matches" fixedTopGap="56">
       <mat-nav-list>
-
-
         <a mat-list-item routerLink="/korisnici" routerLinkActive="active">Korisnici </a>
         <a mat-list-item routerLink="/smjestaj" routerLinkActive="active">Smještaj </a>
       </mat-nav-list>
