--- a/AngularCaritasPRAVI/src/app/users/users.component.html
+++ b/AngularCaritasPRAVI/src/app/users/users.component.html
@@ -1,6 +1,6 @@
 
 
-<button mat-stroked-button color="primary" class="addUser" routerLink="/korisnici-edit">+  Dodaj korisnika</button>
+<button mat-stroked-button color="primary" class="addUser" routerLink="/korisnici-add">+  Dodaj korisnika</button>
 
   <div class="example-table-container mat-elevation-z8">
 
