popravljen bug sa dodavanjem korisnika

--- a/AngularCaritasPRAVI/src/app/users/user-edit/user-edit.component.html
+++ b/AngularCaritasPRAVI/src/app/users/user-edit/user-edit.component.html
@@ -1,75 +1,3 @@
-<div class="loading-shade" *ngIf="isLoadingResults">
-  <mat-spinner *ngIf="isLoadingResults"></mat-spinner>
-</div>
-
-<div class="container mat-elevation-z8">
-  <form class="form-container">
-
-    <mat-form-field class="form-field-container">
-      <input type="text" matInput [formControl]="name" placeholder="Ime" required>
-      <mat-error *ngIf="name.hasError('required')">
-        Ime je obavezno
-      </mat-error>
-    </mat-form-field>
-
-    <mat-form-field class="form-field-container">
-      <input type="text" matInput [formControl]="lastName" placeholder="Prezime" required>
-      <mat-error *ngIf="lastName.hasError('required')">
-        Prezime je obavezno
-      </mat-error>
-    </mat-form-field>
-
-    <mat-form-field class="form-field-container">
-      <input type="text" matInput [formControl]="oib" placeholder="OIB" required maxlength="11">
-      <mat-error *ngIf="oib.hasError('required')">
-        OIB je obavezan
-      </mat-error>
-    </mat-form-field>
-
-    <mat-form-field class="form-field-container">
-      <input type="text" matInput [formControl]="address" placeholder="Adresa" required >
-      <mat-error *ngIf="address.hasError('required')">
-        Adresa je obvezna
-      </mat-error>
-    </mat-form-field>
-
-    <mat-form-field class="form-field-container">
-      <input type="text" matInput [formControl]="phoneNumber" placeholder="Telefonski broj" required>
-      <mat-error *ngIf="phoneNumber.hasError('required')">
-          Telefonski broj je obavezan
-      </mat-error>
-    </mat-form-field>
-
-    <mat-form-field class="form-field-container">
-        <mat-select placeholder="Nacionalnost" [formControl]="nationality"> 
-            <mat-option value="1">
-              Hrvatsko
-            </mat-option>
-            <mat-option value="2">
-              Srpsko
-            </mat-option>
-            <mat-option value="3">
-              Bošnjačko
-            </mat-option>
-          </mat-select>
-      <mat-error *ngIf="nationality.hasError('required')">Državljanstvo je obavezno</mat-error>
-    </mat-form-field>
-
-    <mat-form-field class="form-field-container">
-        <mat-select placeholder="Spol" [formControl]="gender">
-          <mat-option value="1">
-            Muško
-          </mat-option>
-          <mat-option value="2">
-            Žensko
-          </mat-option>
-          <mat-option value="3">
-            Neodređeno
-          </mat-option>
-        </mat-select>
-      <mat-error *ngIf="gender.hasError('required')">Spol je obavezan</mat-error>
-    </mat-form-field>
-
-    <button type="submit" mat-raised-button color="primary" (click)="onSubmit()">Dodaj novog korisnika</button>
-  </form>
-</div>
+<p>
+  user-edit works!
+</p>
