--- a/AngularCaritasPRAVI/src/app/users/users.component.html
+++ b/AngularCaritasPRAVI/src/app/users/users.component.html
@@ -1,57 +1,65 @@
+<button mat-stroked-button color="primary" class="addUser" routerLink="/korisnici-add">+ Dodaj korisnika</button>
+
+<div class="example-table-container mat-elevation-z8">
+
+  <table mat-table [dataSource]="data"   matSort (matSortChange)="sortData($event)"
+    [matSortActive]="sortActive" [matSortDirection]="sortDirection">
+
+    <ng-container matColumnDef="oib">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>OIB</th>
+      <td mat-cell *matCellDef="let user">{{user.oib}}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Ime</th>
+      <td mat-cell *matCellDef="let user">{{user.name}}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="lastName">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Prezime</th>
+      <td mat-cell *matCellDef="let user">{{user.lastName}}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="address">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>Adresa</th>
+      <td mat-cell *matCellDef="let user">{{user.address}}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="phoneNumber">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>Broj mobitela</th>
+      <td mat-cell *matCellDef="let user">{{user.phoneNumber}}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="nationality">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>Nacionalnost</th>
+      <td mat-cell *matCellDef="let user">{{user.nationality.nationalityName}}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="gender">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>Spol</th>
+      <td mat-cell *matCellDef="let user">{{user.gender.genderName}}</td>
+    </ng-container>
 
 
-<button mat-stroked-button color="primary" class="addUser" routerLink="/korisnici-add">+  Dodaj korisnika</button>
 
-  <div class="example-table-container mat-elevation-z8">
+    <ng-container matColumnDef="actions">
+      <th mat-header-cell *matHeaderCellDef>Akcije</th>
+      <td mat-cell *matCellDef="let user">
+        <button mat-raised-button matTooltip="Brisanje stavke" (click)="deleteData(user.id)" color="warn">
+          <mat-icon class="fas fa-broom">X</mat-icon>
+        </button>
+        <button mat-raised-button matTooltip="Uredi korisnika" (click)="editUser(user.id)" color="primary">
+          <mat-icon class="fas fa-broom">E</mat-icon>
+        </button>
+      </td>
+    </ng-container>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
 
-    <table mat-table [dataSource]="data" class="example-table"
-           matSort matSort (matSortChange)="sortData($event)" [matSortActive]="sortActive" [matSortDirection]="sortDirection"  >
-           
-      <ng-container matColumnDef="oib">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>OIB</th>
-        <td mat-cell *matCellDef="let user">{{user.oib}}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Ime</th>
-        <td mat-cell *matCellDef="let user">{{user.name}}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="lastName">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Prezime</th>
-        <td mat-cell *matCellDef="let user">{{user.lastName}}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="address">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>Adresa</th>
-        <td mat-cell *matCellDef="let user">{{user.address}}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="phoneNumber">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>Broj mobitela</th>
-        <td mat-cell *matCellDef="let user">{{user.phoneNumber}}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="nationality">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>Nacionalnost</th>
-        <td mat-cell *matCellDef="let user">{{user.nationality.nationalityName}}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="gender">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>Spol</th>
-        <td mat-cell *matCellDef="let user">{{user.gender.genderName}}</td>
-      </ng-container>
-
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
-    
-    <mat-paginator 
-    [length]="resultsLength" 
-    [pageSize]="pageSize" 
-    [pageSizeOptions]="[5, 10, 25, 50]"
-    [pageIndex]="pageIndex"
-    (page)="pageEvent = getServerData($event)"></mat-paginator>  </div>
+  <mat-paginator [length]="resultsLength" [pageSize]="pageSize" [pageSizeOptions]="[5, 10, 25, 50]" [pageIndex]="pageIndex"
+    (page)="pageEvent = getServerData($event)"></mat-paginator>
+</div>
 
 
 
