--- a/AngularCaritasPRAVI/src/app/residence/residence.component.html
+++ b/AngularCaritasPRAVI/src/app/residence/residence.component.html
@@ -1,10 +1,9 @@
-
-
+<button mat-stroked-button color="primary" class="addUser" routerLink="/smjestaj-add">+ Dodaj smještaj</button>
 
 <div class="example-table-container mat-elevation-z8">
 
-  <table mat-table [dataSource]="accommodations" class="example-table" matSort (matSortChange)="sortData($event)"
-    [matSortActive]="sortActive" [matSortDirection]="sortDirection">
+  <table mat-table [dataSource]="accommodations" class="example-table" matSort (matSortChange)="sortDataAcc($event)"
+    [matSortActive]="sortActiveAcc" [matSortDirection]="sortDirectionAcc" #sortAcc>
 
     <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Broj smještaja</th>
@@ -24,43 +23,70 @@
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Opis</th>
       <td mat-cell *matCellDef="let acc">{{acc.description}}</td>
     </ng-container>
-
+    <ng-container matColumnDef="actions">
+      <th mat-header-cell *matHeaderCellDef>Akcije</th>
+      <td mat-cell *matCellDef="let acc">
+        <button mat-raised-button matTooltip="Brisanje stavke" (click)="deleteAccData(acc.id)" color="warn">
+          <mat-icon class="fas fa-broom">X</mat-icon>
+        </button>
+        <button mat-raised-button matTooltip="Uredi smještaj" (click)="editAcc(acc.id)" color="primary">
+          <mat-icon class="fas fa-broom">E</mat-icon>
+        </button>
+      </td>
+    </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumnsAcc"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumnsAcc;"></tr>
   </table>
 </div>
-<mat-paginator [length]="resultsLength" [pageSize]="pageSize" [pageSizeOptions]="[5, 10, 25, 50]" [pageIndex]="pageIndex"
-    (page)="pageEvent = getServerData($event)"></mat-paginator>
+<mat-paginator #pagAcc [length]="resultsLengthAcc" [pageSize]="pageSizeAcc" [pageSizeOptions]="[5, 10, 25, 50]" [pageIndex]="pageIndexAcc"
+  (page)="pageEventAcc = getAccServerData($event)"></mat-paginator>
 
 
-  <!-- <div class="example-table-container mat-elevation-z8">
+<div class="example-table-container mat-elevation-z8">
 
-      <table mat-table [dataSource]="rooms" class="example-table" matSort matSort (matSortChange)="sortData($event)"
-        [matSortActive]="sortActive" [matSortDirection]="sortDirection">
-    
-        <ng-container matColumnDef="id">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Broj Sobe</th>
-          <td mat-cell *matCellDef="let room">{{room.id}}</td>
-        </ng-container>
-        <ng-container matColumnDef="roomName">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Ime smještaja</th>
-          <td mat-cell *matCellDef="let room">{{room.roomName}}</td>
-        </ng-container>
-    
-        <ng-container matColumnDef="description">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Opis</th>
-          <td mat-cell *matCellDef="let room">{{room.description}}</td>
-        </ng-container>
-    
-    
-        <tr mat-header-row *matHeaderRowDef="displayedColumnsRoom"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumnsRoom;"></tr>
-      </table>
-    </div>
-      <mat-paginator></mat-paginator>
-    
-      <div class="example-table-container mat-elevation-z8">
+  <table mat-table [dataSource]="rooms" class="example-table" matSort (matSortChange)="sortDataRoom($event)"
+    [matSortActive]="sortActiveRoom" [matSortDirection]="sortDirectionRoom" #sortRoom>
+
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Broj Sobe</th>
+      <td mat-cell *matCellDef="let room">{{room.id}}</td>
+    </ng-container>
+    <ng-container matColumnDef="RoomName">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Ime smještaja</th>
+      <td mat-cell *matCellDef="let room">{{room.roomName}}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="Description">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Opis</th>
+      <td mat-cell *matCellDef="let room">{{room.description}}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="Smjestaj">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Smještaj</th>
+      <td mat-cell *matCellDef="let room">{{room.accommodation.accommodationName}}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="actions">
+      <th mat-header-cell *matHeaderCellDef>Akcije</th>
+      <td mat-cell *matCellDef="let room">
+        <button mat-raised-button matTooltip="Brisanje stavke" (click)="deleteRoomData(room.id)" color="warn">
+          <mat-icon class="fas fa-broom">X</mat-icon>
+        </button>
+        <button mat-raised-button matTooltip="Uredi smještaj" (click)="editRoom(room.id)" color="primary">
+          <mat-icon class="fas fa-broom">E</mat-icon>
+        </button>
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumnsRoom"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumnsRoom;"></tr>
+  </table>
+</div>
+<mat-paginator #pagRoom [length]="resultsLengthRoom" [pageSize]="pageSizeRoom" [pageSizeOptions]="[5, 10, 25, 50]" [pageIndex]="pageIndexRoom"
+  (page)="pageEventRoom = getRoomServerData($event)"></mat-paginator>
+
+<!-- <div class="example-table-container mat-elevation-z8">
     
           <table mat-table [dataSource]="beds" class="example-table" matSort matSort (matSortChange)="sortData($event)"
             [matSortActive]="sortActive" [matSortDirection]="sortDirection">
