--- a/AngularCaritasPRAVI/src/app/users/users.component.html
+++ b/AngularCaritasPRAVI/src/app/users/users.component.html
@@ -37,7 +37,7 @@
 
     <ng-container matColumnDef="gender">
       <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>Spol</th>
-      <td mat-cell *matCellDef="let user">{{user.gender.genderName}}</td>
+      <a ><td mat-cell *matCellDef="let user">{{user.gender.genderName}}</td></a>
     </ng-container>
 
 
