--- a/AngularCaritasPRAVI/src/app/residence/residence-add/residence-add.component.html
+++ b/AngularCaritasPRAVI/src/app/residence/residence-add/residence-add.component.html
@@ -23,5 +23,6 @@
     </mat-form-field>
 
     <button type="submit" mat-raised-button color="primary" (click)="onSubmit()">Dodaj novi smještaj</button>
+    <button type="submit" mat-raised-button color="primary" (click)="back()">Nazad</button>
   </form>
 </div>
