--- a/AngularCaritasPRAVI/src/app/residence/room-add/room-add.component.html
+++ b/AngularCaritasPRAVI/src/app/residence/room-add/room-add.component.html
@@ -27,5 +27,7 @@
     </mat-form-field>
     
     <button type="submit" mat-raised-button color="primary" (click)="onSubmit()">Dodaj novu sobu</button>
+    <button type="submit" mat-raised-button color="primary" (click)="back()">Nazad</button>
+
   </form>
 </div>
