--- a/AngularCaritasPRAVI/src/app/residence/residence.component.html
+++ b/AngularCaritasPRAVI/src/app/residence/residence.component.html
@@ -3,7 +3,7 @@
 <div class="example-table-container mat-elevation-z8">
 
   <table mat-table #sortAcc="matSort" [dataSource]="accommodations" class="example-table" matSort (matSortChange)="sortDataAcc($event)"
-    [matSortActive]="sortActiveAcc" [matSortDirection]="sortDirectionAcc" >
+    [matSortActive]="sortActiveAcc" [matSortDirection]="sortDirectionAcc">
 
     <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Broj smještaja</th>
@@ -39,14 +39,14 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumnsAcc;"></tr>
   </table>
 </div>
-<mat-paginator #pagAcc [length]="resultsLengthAcc" [pageSize]="pageSizeAcc" [pageSizeOptions]="[5, 10, 25, 50]" [pageIndex]="pageIndexAcc"
-  (page)="pageEventAcc = getAccServerData($event)"></mat-paginator>
+<mat-paginator #pagAcc [length]="resultsLengthAcc" [pageSize]="pageSizeAcc" [pageSizeOptions]="[5, 10, 25, 50]"
+  [pageIndex]="pageIndexAcc" (page)="pageEventAcc = getAccServerData($event)"></mat-paginator>
 
-  <button mat-stroked-button color="primary" class="addUser" routerLink="/soba-add">+ Dodaj sobu</button>
+<button mat-stroked-button color="primary" class="addUser" routerLink="/soba-add">+ Dodaj sobu</button>
 
 <div class="example-table-container mat-elevation-z8">
 
-  <table mat-table #sortRoom  ="matSort" [dataSource]="rooms" class="example-table" matSort (matSortChange)="sortDataRoom($event)"
+  <table mat-table #sortRoom="matSort" [dataSource]="rooms" class="example-table" matSort (matSortChange)="sortDataRoom($event)"
     [matSortActive]="sortActiveRoom" [matSortDirection]="sortDirectionRoom">
 
     <ng-container matColumnDef="id">
@@ -84,33 +84,51 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumnsRoom;"></tr>
   </table>
 </div>
-<mat-paginator #pagRoom [length]="resultsLengthRoom" [pageSize]="pageSizeRoom" [pageSizeOptions]="[5, 10, 25, 50]" [pageIndex]="pageIndexRoom"
-  (page)="pageEventRoom = getRoomServerData($event)"></mat-paginator>
+<mat-paginator #pagRoom [length]="resultsLengthRoom" [pageSize]="pageSizeRoom" [pageSizeOptions]="[5, 10, 25, 50]"
+  [pageIndex]="pageIndexRoom" (page)="pageEventRoom = getRoomServerData($event)"></mat-paginator>
+  
+  
+  <button mat-stroked-button color="primary" class="addUser" routerLink="/krevet-add">+ Dodaj krevet</button>
 
-<!-- <div class="example-table-container mat-elevation-z8">
-    
-          <table mat-table [dataSource]="beds" class="example-table" matSort matSort (matSortChange)="sortData($event)"
-            [matSortActive]="sortActive" [matSortDirection]="sortDirection">
-        
-            <ng-container matColumnDef="id">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header>Broj Kreveta</th>
-              <td mat-cell *matCellDef="let bed">{{bed.id}}</td>
-            </ng-container>
-            <ng-container matColumnDef="bedName">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header>Ime kreveta</th>
-              <td mat-cell *matCellDef="let bed">{{bed.bedName}}</td>
-            </ng-container>
-        
-            
-        
-            <ng-container matColumnDef="description">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header>Opis </th>
-              <td mat-cell *matCellDef="let bed">{{bed.description}}</td>
-            </ng-container>
-        
-        
-            <tr mat-header-row *matHeaderRowDef="displayedColumnsBed"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumnsBed;"></tr>
-          </table>
-        
-          <mat-paginator></mat-paginator> -->
+<div class="example-table-container mat-elevation-z8">
+
+  <table mat-table #sortBed="matSort" [dataSource]="beds" class="example-table" matSort (matSortChange)="sortDataBed($event)"
+    [matSortActive]="sortActiveBed" [matSortDirection]="sortDirectionBed">
+
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Broj Kreveta</th>
+      <td mat-cell *matCellDef="let bed">{{bed.id}}</td>
+    </ng-container>
+    <ng-container matColumnDef="bedName">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Ime kreveta</th>
+      <td mat-cell *matCellDef="let bed">{{bed.bedName}}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="description">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Opis </th>
+      <td mat-cell *matCellDef="let bed">{{bed.description}}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="Soba">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Soba </th>
+      <td mat-cell *matCellDef="let bed">{{bed.room.roomName}}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="actions">
+      <th mat-header-cell *matHeaderCellDef>Akcije</th>
+      <td mat-cell *matCellDef="let bed">
+        <button mat-raised-button matTooltip="Brisanje stavke" (click)="deleteBedData(bed.id)" color="warn">
+          <mat-icon class="fas fa-broom">X</mat-icon>
+        </button>
+        <button mat-raised-button matTooltip="Uredi smještaj" (click)="editBed(bed.id)" color="primary">
+          <mat-icon class="fas fa-broom">E</mat-icon>
+        </button>
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumnsBed"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumnsBed;"></tr>
+  </table>
+
+  <mat-paginator #pagBed [length]="resultsLengthBed" [pageSize]="pageSizeBed" [pageSizeOptions]="[5, 10, 25, 50]"
+    [pageIndex]="pageIndexBed" (page)="pageEventBed = getBedServerData($event)"></mat-paginator>
