--- a/AngularCaritasPRAVI/src/app/users/user-add-u/user-add-u.component.html
+++ b/AngularCaritasPRAVI/src/app/users/user-add-u/user-add-u.component.html
@@ -50,34 +50,25 @@
       <mat-error *ngIf="gender.hasError('required')">Spol je obvezan</mat-error>
     </mat-form-field> -->
     <mat-form-field class="form-field-container">
-        <mat-select placeholder="Nacionalnost" [formControl]="nationality"> 
-            <mat-option value="1">
-              Hrvatsko
-            </mat-option>
-            <mat-option value="2">
-              Srpsko
-            </mat-option>
-            <mat-option value="3">
-              Bošnjačko
-            </mat-option>
-          </mat-select>
-      <mat-error *ngIf="nationality.hasError('required')">Državljanstvo je obavezno</mat-error>
-    </mat-form-field>
+        <mat-select placeholder="Nacionalnost" [formControl]="nationality">
+         <mat-option *ngFor="let nat of nationalityCollection" value="{{nat.id}}">
+           {{nat.nationalityName}}
+         </mat-option> 
+       </mat-select> 
+       <!-- <mat-error *ngIf="gender.hasError('required')">Spol je obavezan</mat-error> -->
+       <!-- <input type="text" matInput [formControl]="accommodation" placeholder="Smještaj" > -->
+     </mat-form-field>
+    
 
     <mat-form-field class="form-field-container">
         <mat-select placeholder="Spol" [formControl]="gender">
-          <mat-option value="1">
-            Muško
-          </mat-option>
-          <mat-option value="2">
-            Žensko
-          </mat-option>
-          <mat-option value="3">
-            Neodređeno
-          </mat-option>
-        </mat-select>
-      <mat-error *ngIf="gender.hasError('required')">Spol je obavezan</mat-error>
-    </mat-form-field>
+         <mat-option *ngFor="let gen of genderCollection" value="{{gen.id}}">
+           {{gen.genderName}}
+         </mat-option> 
+       </mat-select> 
+       <!-- <mat-error *ngIf="gender.hasError('required')">Spol je obavezan</mat-error> -->
+       <!-- <input type="text" matInput [formControl]="accommodation" placeholder="Smještaj" > -->
+     </mat-form-field>
     
     <button type="submit" mat-raised-button color="primary" (click)="onSubmit()">Dodaj novog korisnika</button>
   </form>
